--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Forty by HTML5 UP</title>
+		<title>Intelligent Agents E-Portfolio - BASHAIR ALHOSANI</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
+						<a href="index.html" class="logo"><strong>IA E-Portfolio</strong> <span>by BASHAIR ALHOSANI</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -29,13 +29,14 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="artefacts.html">Learning Artefacts</a></li>
+							<li><a href="projects.html">Individual Projects</a></li>
+							<li><a href="evaluation.html">Team Project Evaluation</a></li>
+							<li><a href="reflection.html">Critical Reflection</a></li>
 						</ul>
 						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
+							<li><a href="#contact" class="button primary fit">Contact</a></li>
+							<li><a href="https://github.com/BashairAlhosani" class="button fit">GitHub</a></li>
 						</ul>
 					</nav>
 
@@ -43,13 +44,13 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Hi, my name is Forty</h1>
+								<h1>Intelligent Agents E-Portfolio</h1>
 							</header>
 							<div class="content">
-								<p>A responsive site template designed by HTML5 UP<br />
-								and released under the Creative Commons.</p>
+								<p>A comprehensive learning and development portfolio documenting my<br />
+								journey through intelligent agents concepts, team collaboration, and professional growth.</p>
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">Get Started</a></li>
+									<li><a href="#one" class="button next scrolly">Explore Portfolio</a></li>
 								</ul>
 							</div>
 						</div>
@@ -58,73 +59,57 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- One -->
+						<!-- Portfolio Sections -->
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/artefacts.jpg" alt="Learning Artefacts" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Aliquam</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="artefacts.html" class="link">Learning Artefacts</a></h3>
+										<p>Exercises, coding scripts, system designs, and forum contributions showcasing analytical skills</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/projects.jpg" alt="Individual Projects" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Tempus</a></h3>
-										<p>feugiat amet tempus</p>
+										<h3><a href="projects.html" class="link">Individual Projects</a></h3>
+										<p>Individual contributions to team projects with screenshots and evidence of my work</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/evaluation.jpg" alt="Team Project Evaluation" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Magna</a></h3>
-										<p>Lorem etiam nullam</p>
+										<h3><a href="evaluation.html" class="link">Team Project Evaluation</a></h3>
+										<p>Evaluation of team's work from Unit 6 and collaborative development process</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/reflection.jpg" alt="Critical Reflection" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Ipsum</a></h3>
-										<p>Nisl sed aliquam</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Consequat</a></h3>
-										<p>Ipsum dolor sit amet</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Etiam</a></h3>
-										<p>Feugiat amet tempus</p>
+										<h3><a href="reflection.html" class="link">Critical Reflection</a></h3>
+										<p>Reflections on intelligent agents, skills gained, and knowledge acquired throughout the module</p>
 									</header>
 								</article>
 							</section>
 
-						<!-- Two -->
+						<!-- Portfolio Overview -->
 							<section id="two">
 								<div class="inner">
 									<header class="major">
-										<h2>Massa libero</h2>
+										<h2>Portfolio Overview</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
+									<p>This e-portfolio documents my comprehensive learning journey through the Intelligent Agents module, showcasing technical competence, analytical skills, and critical reflection on being part of a development team.</p>
+									<p>The portfolio is structured to demonstrate progressive development across all learning outcomes, with particular emphasis on collaborative working, individual contributions, and reflective practice that characterizes professional software development.</p>
+									
 									<ul class="actions">
-										<li><a href="landing.html" class="button next">Get Started</a></li>
+										<li><a href="artefacts.html" class="button next">Start with Learning Artefacts</a></li>
 									</ul>
 								</div>
 							</section>
@@ -161,23 +146,23 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
+										<a href="mailto:bashair.alhosani@example.com">bashair.alhosani@example.com</a>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
-										<span class="icon solid alt fa-phone"></span>
-										<h3>Phone</h3>
-										<span>(000) 000-0000 x12387</span>
+										<span class="icon solid alt fa-graduation-cap"></span>
+										<h3>Programme</h3>
+										<span>MSc Computer Science<br />
+										Intelligent Agents Module<br />
+										University of Essex Online</span>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
-										<span class="icon solid alt fa-home"></span>
-										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
-										United States of America</span>
+										<span class="icon solid alt fa-calendar"></span>
+										<h3>Academic Year</h3>
+										<span>2024-2025</span>
 									</div>
 								</section>
 							</section>
@@ -188,14 +173,12 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/BashairAlhosani" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://linkedin.com/in/yourprofile" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="mailto:bashair.alhosani@example.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>&copy; BASHAIR ALHOSANI 2024-2025</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li><li>Academic E-Portfolio</li>
 							</ul>
 						</div>
 					</footer>
