--- a/artefacts.html
+++ b/artefacts.html
@@ -140,6 +140,11 @@
 
 .unit-content {
     padding: 30px;
+    color: #2c3e50;
+}
+
+.unit-content p {
+    color: #2c3e50;
 }
 
 .unit-content h3 {
@@ -170,6 +175,7 @@
     margin: 20px 0;
     border-radius: 4px;
     font-style: italic;
+    color: #2c3e50;
 }
 
 .analysis-section {
@@ -213,7 +219,7 @@
 }
 
 .skills-note {
-    color: #6c757d;
+    color: #495057;
     font-style: italic;
     margin-top: 10px;
 }
