--- a/artefacts.html
+++ b/artefacts.html
@@ -123,11 +123,12 @@
 
 <style>
 .unit-section {
-    background: #f8f9fa;
+    background: #ffffff;
     border-radius: 12px;
     margin: 40px 0;
     overflow: hidden;
     box-shadow: 0 2px 10px rgba(0,0,0,0.08);
+    color: #000000;
 }
 
 .unit-section h2 {
@@ -140,11 +141,17 @@
 
 .unit-content {
     padding: 30px;
-    color: #2c3e50;
+    color: #000000;
 }
 
 .unit-content p {
-    color: #2c3e50;
+    color: #000000;
+    line-height: 1.8;
+}
+
+.unit-content strong {
+    color: #000000;
+    font-weight: 700;
 }
 
 .unit-content h3 {
@@ -162,6 +169,10 @@
     border: 1px solid #e0e0e0;
 }
 
+.topic-box p {
+    color: #000000 !important;
+}
+
 .topic-label {
     font-weight: 600;
     color: #667eea;
@@ -175,7 +186,12 @@
     margin: 20px 0;
     border-radius: 4px;
     font-style: italic;
-    color: #2c3e50;
+    color: #000000;
+}
+
+.highlight-box p {
+    color: #000000 !important;
+    font-weight: 500;
 }
 
 .analysis-section {
@@ -183,8 +199,14 @@
 }
 
 .analysis-section h4 {
-    color: #495057;
+    color: #000000;
     margin-bottom: 15px;
+    font-weight: 700;
+}
+
+.analysis-section p {
+    color: #000000 !important;
+    line-height: 1.8;
 }
 
 .outcomes-section {
@@ -219,9 +241,10 @@
 }
 
 .skills-note {
-    color: #495057;
+    color: #000000 !important;
     font-style: italic;
     margin-top: 10px;
+    font-weight: 500;
 }
 
 .metadata-row {
@@ -237,6 +260,8 @@
 .meta-item {
     flex: 1;
     min-width: 250px;
+    color: #000000 !important;
+    font-weight: 500;
 }
 
 .evidence-links {
