--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="artefacts.html">Learning Artefacts</a></li>
-							<li><a href="projects.html">Individual Projects</a></li>
-							<li><a href="evaluation.html">Team Project Evaluation</a></li>
+							<li><a href="projects.html">Projects</a></li>
 							<li><a href="reflection.html">Critical Reflection</a></li>
 						</ul>
 						<ul class="actions stacked">
@@ -72,20 +71,11 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/projects.jpg" alt="Individual Projects" />
+										<img src="images/projects.jpg" alt="Projects" />
 									</span>
 									<header class="major">
-										<h3><a href="projects.html" class="link">Individual Projects</a></h3>
-										<p>Individual contributions to team projects with screenshots and evidence of my work</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/evaluation.jpg" alt="Team Project Evaluation" />
-									</span>
-									<header class="major">
-										<h3><a href="evaluation.html" class="link">Team Project Evaluation</a></h3>
-										<p>Evaluation of team's work from Unit 6 and collaborative development process</p>
+										<h3><a href="projects.html" class="link">Projects</a></h3>
+										<p>Team and individual projects with screenshots and evidence of my contributions</p>
 									</header>
 								</article>
 								<article>
